# Aqua

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: llvm-win32-toolchain.cmake  target_helpers.cmake
docs/: Aqua_TechnicalDocument.tex
engine/: CMakeLists.txt
engine/core/private/allocator/: global_allocator.cpp  null_allocator.cpp
engine/core/public/core/: types.hpp
engine/core/public/core/allocator/: allocator.hpp  global_allocator.hpp  null_allocator.hpp
engine/core/public/core/stl/: vector.hpp
engine/tests/: CMakeLists.txt  main.cpp
engine/unit_tests/: CMakeLists.txt
engine/unit_tests/private/: main.cpp
